# 24L-TKOM-interpreter

./: .clang-format  CMakeLists.txt  README.md  initial_documentation.md
docs/: documentation.md  initial_documentation.md
integrationTests/: CMakeLists.txt  integrationTest.cpp
integrationTests/errorTests/: collision1.txt  collision2.txt  includedError.txt
integrationTests/factorialTest/: factorial.txt  factorialUse.txt
integrationTests/test1/: factorial.txt  factorialUse.txt
integrationTests/test2/: collision2.txt  includedError.txt  syntaxError.txt
integrationTests/test3/: lineNumberAdder.txt
integrationTests/typesTest/: aStruct.txt  aVariant.txt  main.txt
src/app/: CMakeLists.txt  argumentParsing.cpp  main.cpp
src/app/include/: appExceptions.hpp  argumentParsing.hpp
src/errorHandler/: CMakeLists.txt  errorHandler.cpp
src/errorHandler/include/: errorHandler.hpp  iErrorHandler.hpp
src/interpreter/: CMakeLists.txt  builtinFunctions.cpp  includeExecution.cpp  interpreter.cpp  runtimeExceptions.cpp  semanticAnalysis.cpp  semanticAnalyzer.cpp
src/interpreter/include/: builtinFunctions.hpp  includeExecution.hpp  interpreter.hpp  interpreterExceptions.hpp  runtimeExceptions.hpp  semanticAnalysis.hpp  semanticAnalyzer.hpp  semanticExceptions.hpp
src/lexer/: CMakeLists.txt  commentDiscarder.cpp  lexer.cpp  lexerExceptions.cpp  token.cpp  tokenType.cpp
src/lexer/include/: commentDiscarder.hpp  iLexer.hpp  ilexer.hpp  lexer.hpp  lexerExceptions.hpp  token.hpp  tokenType.hpp
src/lexer/tests/: CMakeLists.txt
src/parser/: CMakeLists.txt  documentTree.cpp  object.cpp  parser.cpp  printingVisitor.cpp  type.cpp
src/parser/include/: documentTree.hpp  documentTreeVisitor.hpp  iVisitable.hpp  iVisitor.hpp  object.hpp  parser.hpp  parserExceptions.hpp  printingVisitor.hpp  type.hpp
src/reader/: CMakeLists.txt  convertToString.cpp  position.cpp  reader.cpp  readerExceptions.cpp  streamReader.cpp
src/reader/include/: convertToString.hpp  iReader.hpp  ireader.hpp  position.hpp  reader.hpp  readerExceptions.hpp  streamReader.hpp
src/semanticAnalyzer/: CMakeLists.txt  semanticAnalyzer.cpp
src/semanticAnalyzer/include/: semanticAnalyzer.hpp
tests/: CMakeLists.txt  argumentParsingTest.cpp  builtinFunctionsTest.cpp  commentDiscarderTest.cpp  helpers.cpp  includeExecutionTest.cpp  interpreterTest.cpp  lexerAndParserTest.cpp  lexerParserSemanticTest.cpp  lexerTest.cpp  lexerToInterpreterTest.cpp  parserTest.cpp  readerTest.cpp  semanticAnalysisTest.cpp  testBuiltinFunctions.cpp  testErrorHandler.hpp
tests/include/: checkNodeContainer.hpp  fakeLexer.hpp  helpers.hpp
